[tool.poetry]
name = "karaokio"
version = "0.1.0"
description = "Build a smart karaoke"
authors = ["bot.kampa <kittipat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
streamlit = "^1.20.0"
pytube = "^15.0.0"
moviepy = "^1.0.3"
jupyterlab = "^3.6.1"
ipykernel = "^6.21.3"
openunmix = "^1.2.1"
stempeg = "^0.2.3"
musdb = "^0.4.0"
youtube-dl = "^2021.12.17"
pydub = "^0.25.1"
ipywidgets = "^8.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
